[package]
name = "near-lake"
version = "2.5.1"
authors = ["Near Inc <hello@nearprotocol.com>"]
edition = "2021"

[build-dependencies]
anyhow = "1.0.51"
rustc_version = "0.4"

[dependencies]
actix = "0.13.0"
anyhow = "1.0.51"
aws-config = "1.4.0"
aws-sdk-s3 = "1.29.0"
clap = { version = "4.5.4", features = ["color", "derive", "env"] }
dotenv = "0.15.0"
futures = "0.3.5"
http = "1.1.0"
humantime = "2.1.0"
openssl-probe = "0.1.5"
once_cell = "1.19.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1.0.55"
tokio = { version = "1.37.0", features = ["sync", "time"] }
tokio-stream = { version = "0.1" }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"

# Based on: https://github.com/near/nearcore/issues/12944#issuecomment-2707438357
tempfile = "=3.14.0"

# Please, update the supported nearcore version in .cargo/config.toml file
near-indexer = { git = "https://github.com/near/nearcore", rev = "710f763472a65eaab5a654ca40111cbdc3da99f8" }
near-indexer-primitives = { git = "https://github.com/near/nearcore", rev = "710f763472a65eaab5a654ca40111cbdc3da99f8" }
near-client = { git = "https://github.com/near/nearcore", rev = "710f763472a65eaab5a654ca40111cbdc3da99f8" }
near-config-utils = { git = "https://github.com/near/nearcore", rev = "710f763472a65eaab5a654ca40111cbdc3da99f8" }
near-o11y = { git = "https://github.com/near/nearcore", rev = "710f763472a65eaab5a654ca40111cbdc3da99f8" }
